--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title> Hello </title>
 </head>
 <body>
-	<h1> Hello there </h1>
+	<h1> Hello there. Learning a course on Coursera </h1>
 </body>
 </html>
